[package]
name = "rs-graphs"
version = "0.1.1"
edition = "2021"
authors = ["Guo Fei <me@guofei.site>"]
description = "Graph algorithms in Rust，图算法库/图数据库"
license = "MIT"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "rs_graphs"
path = "src/lib.rs"